ANTLR/Wandlab/WandlabParser.java
// Generated from Wandlab.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WandlabParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
		ARGUMENT=1, STRING=2, POINTER=3, NUMBER=4, COMMENT=5, ALPHA=6, BETA=7, 
		DELTA=8, ZETA=9, ETA=10, LAMBDA=11, MU=12, XI=13, OMICORN=14, PI=15, SIGMA=16, 
		OMEGA=17, GAMMA=18, TAU=19, PHI=20, CHI=21, PREPROCESSNAME=22, PREPROCESSARG=23, 
		DASH=24, SLASH=25, POUND=26, COLON=27, SEMICOLON=28, PIPE=29, TICK=30, 
		QUOTE=31, ARROW=32, LBRACKET=33, RBRACKET=34, WS=35;
=======
		T__0=1, ARGUMENT=2, STRING=3, POINTER=4, ALPHA=5, BETA=6, DELTA=7, ZETA=8, 
		ETA=9, LAMBDA=10, MU=11, XI=12, OMICORN=13, PI=14, SIGMA=15, OMEGA=16, 
		GAMMA=17, TAU=18, PHI=19, CHI=20, PIPE=21, TICK=22, QUOTE=23, ARROW=24, 
		LBRACKET=25, RBRACKET=26, TEXT=27, NUMBER=28, WS=29;
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
	public static final int
		RULE_program = 0, RULE_operation = 1, RULE_op = 2, RULE_function = 3, 
		RULE_subop = 4, RULE_preprocessor_command = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "operation", "op", "function", "subop", "preprocessor_command"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			null, null, null, null, null, null, "'Alpha'", "'Beta'", "'Delta'", "'Zeta'", 
			"'Eta'", "'Lambda'", "'Mu'", "'Xi'", "'Omicorn'", "'Pi'", "'Sigma'", 
			"'Omega'", "'Gamma'", "'Tau'", "'Phi'", "'Chi'", null, null, "'-'", "'/'", 
			"'#'", "':'", "';'", "'|'", "'^'", "'\"'", "'->'", "'['", "']'"
=======
			null, "'-'", null, null, null, "'Alpha'", "'Beta'", "'Delta'", "'Zeta'", 
			"'Eta'", "'Lambda'", "'Mu'", "'Xi'", "'Omicorn'", "'Pi'", "'Sigma'", 
			"'Omega'", "'Gamma'", "'Tau'", "'Phi'", "'Chi'", "'|'", "'^'", "'\"'", 
			"'->'", "'['", "']'"
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			null, "ARGUMENT", "STRING", "POINTER", "NUMBER", "COMMENT", "ALPHA", 
			"BETA", "DELTA", "ZETA", "ETA", "LAMBDA", "MU", "XI", "OMICORN", "PI", 
			"SIGMA", "OMEGA", "GAMMA", "TAU", "PHI", "CHI", "PREPROCESSNAME", "PREPROCESSARG", 
			"DASH", "SLASH", "POUND", "COLON", "SEMICOLON", "PIPE", "TICK", "QUOTE", 
			"ARROW", "LBRACKET", "RBRACKET", "WS"
=======
			null, null, "ARGUMENT", "STRING", "POINTER", "ALPHA", "BETA", "DELTA", 
			"ZETA", "ETA", "LAMBDA", "MU", "XI", "OMICORN", "PI", "SIGMA", "OMEGA", 
			"GAMMA", "TAU", "PHI", "CHI", "PIPE", "TICK", "QUOTE", "ARROW", "LBRACKET", 
			"RBRACKET", "TEXT", "NUMBER", "WS"
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Wandlab.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WandlabParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
		public TerminalNode EOF() { return getToken(WandlabParser.EOF, 0); }
		public List<Preprocessor_commandContext> preprocessor_command() {
			return getRuleContexts(Preprocessor_commandContext.class);
		}
		public Preprocessor_commandContext preprocessor_command(int i) {
			return getRuleContext(Preprocessor_commandContext.class,i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public List<TerminalNode> DASH() { return getTokens(WandlabParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(WandlabParser.DASH, i);
=======
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WandlabParser.EOF, 0); }
		public List<SequenceContext> sequence() {
			return getRuleContexts(SequenceContext.class);
		}
		public SequenceContext sequence(int i) {
			return getRuleContext(SequenceContext.class,i);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15);
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==POUND) {
				{
				{
				setState(12);
				preprocessor_command();
				}
				}
				setState(17);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << BETA) | (1L << DELTA) | (1L << ZETA) | (1L << ETA) | (1L << LAMBDA) | (1L << MU) | (1L << XI) | (1L << OMICORN) | (1L << PI) | (1L << SIGMA) | (1L << OMEGA))) != 0)) {
				{
				{
				setState(18);
				operation();
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DASH) {
					{
					{
					setState(19);
					match(DASH);
					setState(20);
					operation();
					}
					}
					setState(25);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(30);
=======
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(12);
					sequence();
					}
					} 
				}
				setState(17);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			setState(31);
=======
			setState(18);
			operation();
			setState(19);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
=======
	public static class SequenceContext extends ParserRuleContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitSequence(this);
		}
	}

	public final SequenceContext sequence() throws RecognitionException {
		SequenceContext _localctx = new SequenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			operation();
			setState(22);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
	public static class OperationContext extends ParserRuleContext {
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public SubopContext subop() {
			return getRuleContext(SubopContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			setState(33);
			op();
			setState(35);
=======
			setState(24);
			op();
			setState(26);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TICK) {
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(34);
=======
				setState(25);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				subop();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpContext extends ParserRuleContext {
		public TerminalNode ALPHA() { return getToken(WandlabParser.ALPHA, 0); }
		public TerminalNode BETA() { return getToken(WandlabParser.BETA, 0); }
		public TerminalNode DELTA() { return getToken(WandlabParser.DELTA, 0); }
		public List<TerminalNode> PIPE() { return getTokens(WandlabParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(WandlabParser.PIPE, i);
		}
		public List<TerminalNode> ARGUMENT() { return getTokens(WandlabParser.ARGUMENT); }
		public TerminalNode ARGUMENT(int i) {
			return getToken(WandlabParser.ARGUMENT, i);
		}
		public TerminalNode ZETA() { return getToken(WandlabParser.ZETA, 0); }
		public TerminalNode ETA() { return getToken(WandlabParser.ETA, 0); }
		public TerminalNode LAMBDA() { return getToken(WandlabParser.LAMBDA, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode MU() { return getToken(WandlabParser.MU, 0); }
		public TerminalNode XI() { return getToken(WandlabParser.XI, 0); }
		public TerminalNode OMICORN() { return getToken(WandlabParser.OMICORN, 0); }
		public TerminalNode PI() { return getToken(WandlabParser.PI, 0); }
		public TerminalNode SIGMA() { return getToken(WandlabParser.SIGMA, 0); }
		public TerminalNode OMEGA() { return getToken(WandlabParser.OMEGA, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitOp(this);
		}
	}

	public final OpContext op() throws RecognitionException {
		OpContext _localctx = new OpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_op);
		try {
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			setState(77);
=======
			setState(68);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALPHA:
				enterOuterAlt(_localctx, 1);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(37);
=======
				setState(28);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ALPHA);
				}
				break;
			case BETA:
				enterOuterAlt(_localctx, 2);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(38);
=======
				setState(29);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(BETA);
				}
				break;
			case DELTA:
				enterOuterAlt(_localctx, 3);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(39);
				match(DELTA);
				setState(40);
				match(PIPE);
				setState(41);
=======
				setState(30);
				match(DELTA);
				setState(31);
				match(PIPE);
				setState(32);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case ZETA:
				enterOuterAlt(_localctx, 4);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(42);
				match(ZETA);
				setState(43);
				match(PIPE);
				setState(44);
				match(ARGUMENT);
				setState(45);
				match(PIPE);
				setState(46);
=======
				setState(33);
				match(ZETA);
				setState(34);
				match(PIPE);
				setState(35);
				match(ARGUMENT);
				setState(36);
				match(PIPE);
				setState(37);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case ETA:
				enterOuterAlt(_localctx, 5);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(47);
				match(ETA);
				setState(48);
				match(PIPE);
				setState(49);
				match(ARGUMENT);
				setState(50);
				match(PIPE);
				setState(51);
=======
				setState(38);
				match(ETA);
				setState(39);
				match(PIPE);
				setState(40);
				match(ARGUMENT);
				setState(41);
				match(PIPE);
				setState(42);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 6);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(52);
				match(LAMBDA);
				setState(53);
=======
				setState(43);
				match(LAMBDA);
				setState(44);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				function();
				}
				break;
			case MU:
				enterOuterAlt(_localctx, 7);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(54);
				match(MU);
				setState(55);
				match(PIPE);
				setState(56);
				match(ARGUMENT);
				setState(57);
				match(PIPE);
				setState(58);
=======
				setState(45);
				match(MU);
				setState(46);
				match(PIPE);
				setState(47);
				match(ARGUMENT);
				setState(48);
				match(PIPE);
				setState(49);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case XI:
				enterOuterAlt(_localctx, 8);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(59);
				match(XI);
				setState(60);
				match(PIPE);
				setState(61);
				match(ARGUMENT);
				setState(62);
				match(PIPE);
				setState(63);
=======
				setState(50);
				match(XI);
				setState(51);
				match(PIPE);
				setState(52);
				match(ARGUMENT);
				setState(53);
				match(PIPE);
				setState(54);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case OMICORN:
				enterOuterAlt(_localctx, 9);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(64);
				match(OMICORN);
				setState(65);
				match(PIPE);
				setState(66);
=======
				setState(55);
				match(OMICORN);
				setState(56);
				match(PIPE);
				setState(57);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case PI:
				enterOuterAlt(_localctx, 10);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(67);
				match(PI);
				setState(68);
				match(PIPE);
				setState(69);
				match(ARGUMENT);
				setState(70);
				match(PIPE);
				setState(71);
=======
				setState(58);
				match(PI);
				setState(59);
				match(PIPE);
				setState(60);
				match(ARGUMENT);
				setState(61);
				match(PIPE);
				setState(62);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			case SIGMA:
				enterOuterAlt(_localctx, 11);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(72);
				match(SIGMA);
				setState(73);
=======
				setState(63);
				match(SIGMA);
				setState(64);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				function();
				}
				break;
			case OMEGA:
				enterOuterAlt(_localctx, 12);
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				setState(74);
				match(OMEGA);
				setState(75);
				match(PIPE);
				setState(76);
=======
				setState(65);
				match(OMEGA);
				setState(66);
				match(PIPE);
				setState(67);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				match(ARGUMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(WandlabParser.LBRACKET, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(WandlabParser.RBRACKET, 0); }
		public List<TerminalNode> DASH() { return getTokens(WandlabParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(WandlabParser.DASH, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			setState(79);
			match(LBRACKET);
			setState(80);
			operation();
			setState(85);
=======
			setState(70);
			match(LBRACKET);
			setState(78);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DASH) {
				{
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
				{
				setState(81);
				match(DASH);
				setState(82);
=======
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(71);
						sequence();
						}
						} 
					}
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(77);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
				operation();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
<<<<<<< HEAD:ANTLR/Wandlab/java/WandlabParser.java
			setState(88);
=======

			setState(80);
>>>>>>> parent of 5ff3926 (Fixed grammar file and generated C# code):ANTLR/Wandlab/WandlabParser.java
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubopContext extends ParserRuleContext {
		public TerminalNode TICK() { return getToken(WandlabParser.TICK, 0); }
		public TerminalNode GAMMA() { return getToken(WandlabParser.GAMMA, 0); }
		public TerminalNode PIPE() { return getToken(WandlabParser.PIPE, 0); }
		public TerminalNode ARGUMENT() { return getToken(WandlabParser.ARGUMENT, 0); }
		public TerminalNode TAU() { return getToken(WandlabParser.TAU, 0); }
		public TerminalNode PHI() { return getToken(WandlabParser.PHI, 0); }
		public TerminalNode CHI() { return getToken(WandlabParser.CHI, 0); }
		public SubopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).enterSubop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WandlabListener ) ((WandlabListener)listener).exitSubop(this);
		}
	}
